# CaraML

./: .gitattributes  .gitmodules  CLAUDE.md  README.md  settings.gradle.kts
.claude/: settings.local.json
composeApp/: README.md  build.gradle.kts
composeApp/src/androidMain/kotlin/com/debanshu777/caraml/: CaraMLApplication.kt  MainActivity.kt
composeApp/src/androidMain/kotlin/com/debanshu777/caraml/core/di/: AppModule.android.kt
composeApp/src/androidMain/kotlin/com/debanshu777/caraml/core/platform/: AndroidDeviceCapabilities.kt  DeviceCapabilities.android.kt  PlatformPaths.android.kt
composeApp/src/androidMain/kotlin/com/debanshu777/caraml/core/settings/: DataStore.android.kt
composeApp/src/androidMain/kotlin/com/debanshu777/caraml/core/storage/: Database.android.kt
composeApp/src/androidMain/kotlin/com/debanshu777/flash/platform/: PlatformPaths.android.kt
composeApp/src/commonMain/kotlin/com/debanshu777/caraml/: App.kt
composeApp/src/commonMain/kotlin/com/debanshu777/caraml/core/benchmark/: BenchmarkTestSuite.kt  BenchmarkUtils.kt
composeApp/src/commonMain/kotlin/com/debanshu777/caraml/core/di/: AppModule.kt  KoinInit.kt
composeApp/src/commonMain/kotlin/com/debanshu777/caraml/core/domain/: InferenceRepository.kt  LlamaInferenceRepository.kt  ModelReadinessReconciler.kt
composeApp/src/commonMain/kotlin/com/debanshu777/caraml/di/: AppModule.kt
composeApp/src/commonMain/kotlin/com/debanshu777/caraml/domain/: InferenceRepository.kt  LlamaInferenceRepository.kt
composeApp/src/commonMain/kotlin/com/debanshu777/caraml/storage/: AppDatabase.kt
composeApp/src/commonMain/kotlin/com/debanshu777/flash/platform/: PlatformPaths.kt
composeApp/src/commonTest/kotlin/com/debanshu777/caraml/benchmark/: BenchmarkUtilsTest.kt
composeApp/src/iosMain/kotlin/com/debanshu777/caraml/: MainViewController.kt
composeApp/src/iosMain/kotlin/com/debanshu777/flash/platform/: PlatformPaths.ios.kt
composeApp/src/jvmMain/kotlin/com/debanshu777/caraml/: main.kt
composeApp/src/jvmMain/kotlin/com/debanshu777/flash/platform/: PlatformPaths.jvm.kt
diffusionRunner/: README.md  build.gradle.kts
diffusionRunner/src/androidMain/kotlin/com/debanshu777/diffusionrunner/: DiffusionRunner.android.kt
diffusionRunner/src/commonCpp/: DiffusionRunnerCommon.cmake  diffusion_runner_core.cpp  diffusion_runner_core.h  diffusion_runner_jni.cpp
diffusionRunner/src/commonMain/kotlin/com/debanshu777/diffusionrunner/: DiffusionModelConfig.kt  DiffusionModelMetadata.kt  DiffusionRunner.kt  DiffusionRunnerExt.kt  DiffusionRunnerValidation.kt  DiffusionState.kt  ImageGenParams.kt  SampleMethod.kt  VideoGenParams.kt
diffusionRunner/src/iosMain/cpp/: diffusion_runner.cpp  diffusion_runner.def  diffusion_runner.h
diffusionRunner/src/iosMain/kotlin/com/debanshu777/diffusionrunner/: DiffusionRunner.ios.kt
diffusionRunner/src/jvmMain/kotlin/com/debanshu777/diffusionrunner/: DiffusionRunner.jvm.kt
docs/superpowers/plans/: 2026-06-02-sd-rating-system.md
docs/superpowers/specs/: 2026-06-02-sd-rating-system-design.md
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
huggingFaceManager/: README.md  build.gradle.kts
huggingFaceManager/src/androidMain/kotlin/com/debanshu777/huggingfacemanager/download/: DownloadManager.android.kt  StoragePathProvider.android.kt
huggingFaceManager/src/commonMain/kotlin/com/debanshu777/huggingfacemanager/api/: ListModelsParams.kt  RemoteHuggingFaceApiService.kt
huggingFaceManager/src/commonMain/kotlin/com/debanshu777/huggingfacemanager/download/: StoragePathProvider.kt
huggingFaceManager/src/commonMain/kotlin/com/debanshu777/huggingfacemanager/model/: DiffusersModelSupport.kt  ModelFileWeightFilter.kt  PipelineTag.kt
huggingFaceManager/src/commonMain/kotlin/com/debanshu777/huggingfacemanager/sdcpp/: SdCppComponentChecker.kt  SdCppCuratedCatalog.kt  SdCppModelSetup.kt  sd_cpp_curated_models.json
huggingFaceManager/src/commonMain/kotlin/com/debanshu777/huggingfacemanager/usecase/: GetModelFileTreeUseCase.kt
huggingFaceManager/src/commonTest/kotlin/com/debanshu777/huggingfacemanager/model/: ModelFileWeightFilterTest.kt
huggingFaceManager/src/commonTest/kotlin/com/debanshu777/huggingfacemanager/sdcpp/: SdCppCuratedCatalogTest.kt
huggingFaceManager/src/iosMain/kotlin/com/debanshu777/huggingfacemanager/download/: DownloadManager.ios.kt  StoragePathProvider.ios.kt
huggingFaceManager/src/jvmMain/kotlin/com/debanshu777/huggingfacemanager/download/: DownloadManager.jvm.kt  StoragePathProvider.jvm.kt
iosApp/Configuration/: Config.xcconfig
iosApp/iosApp.xcodeproj/: project.pbxproj
libraries/patches/: README.md
libraries/patches/llama.cpp/: 0001-metal-pin-shading-language-version.patch  0002-vulkan-norm-require-f32.patch
libraries/patches/stable-diffusion.cpp/ggml/: 0001-metal-pin-shading-language-version.patch  0002-vulkan-norm-require-f32.patch
nativeEngine/: README.md  build.gradle.kts
nativeEngine/src/androidMain/cpp/: CMakeLists.txt
nativeEngine/src/androidMain/cpp/precompiled-spirv/: MANIFEST.sha256
nativeEngine/src/commonCpp/: GgmlLlama.cmake  GgmlUnified.cmake
nativeEngine/src/iosMain/cpp/: CMakeLists.txt
nativeEngine/src/jvmMain/cpp/: CMakeLists.txt
runner/: README.md  build.gradle.kts
runner/src/androidMain/kotlin/com/debanshu777/runner/: LlamaRunner.android.kt
runner/src/commonCpp/: LlamaRunnerCommon.cmake  llama_runner_core.cpp  llama_runner_core.h  llama_runner_jni.cpp
runner/src/commonMain/kotlin/com/debanshu777/runner/: InferenceState.kt  LlamaRunner.kt  LlamaRunnerExt.kt  LlamaRunnerValidation.kt  NativeRunnerConfig.kt  StructuredOutputGrammar.kt  StructuredOutputParser.kt
runner/src/commonTest/kotlin/com/debanshu777/runner/: StructuredOutputParserTest.kt
runner/src/iosMain/cpp/: llama_runner.cpp  llama_runner.def
runner/src/iosMain/kotlin/com/debanshu777/runner/: LlamaRunner.ios.kt
runner/src/jvmMain/kotlin/com/debanshu777/runner/: LlamaRunner.jvm.kt
scripts/: build-android-vulkan.sh  regen-vulkan-shaders.sh
(+135 files in other folders)
